Update Swagger's annotations
