# internal/handlers/v1/gsm.go
@@ -11,70 +11,24 @@ import (
 	"github.com/gorilla/mux"
 )
 
-// class GsmTableValidator(BaseModel):
-//     """Priem"""
-//     dt_receiving: datetime.date | str  # Data priemki
-//     dt_crch: datetime.date | str  # Data sozdaniya ili posledney pravki
-//     site: str  # Uchastok
-//     income_kg: float   # Prinyato v kg
-//     operator: str  # Operator
-//     provider: str  # Postavshik
-//     contractor: str  # Perevozshik
-//     license_plate: str   # GOS nomer
-//     status: str  # Zagruzgen
-//     been_changed: bool   # table_color = '#f7fcc5' = Tru
-//
-//  [{"dt_receiving": "2024-06-01", "dt_crch": "", "site": "SITE_1", "income_kg": 26442.70, "operator": "OPERATOR_1", "provider": "PROVIDER_1", "contractor": "CONTRACTOR_1", "license_plate": "A902RUS", "status": "Uploaded", "been_changed": false},
-// {"dt_receiving": "2024-06-01",
-// "dt_crch": "",
-// "site": "SITE_2",
-// "income_kg": 562.20,
-// "operator": "OPERATOR_2",
-// "provider": "PROVIDER_2",
-// "contractor": "CONTRACTOR_2",
-// "license_plate": "A342RUS",
-// "status": "Uploaded",
-// "been_changed": false},
-// ...]
-
 // {"dt_receiving": "2026-01-02", "dt_crch": "1988-02-22", "site": "SITE_1", "income_kg": 26442.70, "operator": "OPERATOR_1", "provider": "PROVIDER_1", "contractor": "CONTRACTOR_1", "license_plate": "A902RUS", "status": "Uploaded", "been_changed": false}
 // curl -v -X POST -d '{"dt_receiving": "2026-01-02", "dt_crch": "1988-02-22", "site": "SITE_1", "income_kg": 26442.70, "operator": "OPERATOR_1", "provider": "PROVIDER_1", "contractor": "CONTRACTOR_1", "license_plate": "A902RUS", "status": "Uploaded", "been_changed": false}'  localhost:8080/api/v1/gsm_table/
 
-// swagger:parameters idParam
-type _ struct {
-	// The entry id
-	// in: path
-	// min:1
+// swagger:model
+type IdEntry struct {
+	// ID of the database entry
+	//
 	// required: true
+	// min: 1
 	ID int `json:"id"`
 }
 
-// swagger:parameters dateParam
+// swagger:parameters paramIdEntry
 type _ struct {
-	// Fuel receiving date
-	// in: path
-	// required: true
-	Date crmDate `json:"date"`
-}
-
-// swagger:parameters gsmTableEntry
-type _ struct {
-	GsmTableEntry
-}
-
-// The entry id
-// swagger:response idResponse
-type _ struct {
-	// The entry id
-	// in:body
-	// min:1
+	// ID of the database entry
+	// in:path
+	// min: 1
 	ID int `json:"id"`
-}
-
-// The entry in the GSM tabl
-// swagger:response gsmTableEntry
-type _ struct {
-	GsmTableEntry
 }
 
 // crmDate is a date  based on the specified layout (time.DateOnly = "2006-01-02")
@@ -99,80 +53,92 @@ func (c crmDate) MarshalJSON() ([]byte, error) {
 	return json.Marshal(c.Format(time.DateOnly))
 }
 
+// swagger:parameters paramCrmDate
+type _ struct {
+	// It is a date  based on the specified layout ("2006-01-02")
+	//
+	// required: true
+	// in:path
+	DATE crmDate `json:"date"`
+}
+
 // GsmTableEntry defines the structure for the entry in the GSM table
 //
 // swagger:model
 type GsmTableEntry struct {
+	// ID of the database entry
+	//
+	// required: true
+	// min: 1
+	ID int `json:"id"`
+
 	// Fuel receiving date
-	// in: body
 	//
 	// required: true
 	// example: 2026-01-02
 	Dt_receiving crmDate `json:"dt_receiving"` //     dt_receiving: datetime.date | str  # Data priemki
 
 	// Fuel receiving  date
-	// in: body
 	//
 	// required: false
 	// example: 2026-01-02
 	Dt_crch crmDate `json:"dt_crch,omitempty"` //     dt_crch: datetime.date | str  # Data sozdaniya ili posledney pravki
 
 	// Name of the mining site
-	// in: body
 	//
 	// required: true
 	// example: Some Name
 	Site string `json:"site"` //     site: str  # Uchastok
 
 	// The amount of fuel received at the warehouse in kilograms
-	// in: body
 	//
 	// required: true
 	// example: 362.20
 	Income_kg float64 `json:"income_kg"` //     income_kg: float   # Prinyato v kg
 
 	// Last name of the operator who took the fuel to the warehouse
-	// in: body
 	//
 	// required: true
 	// example: Some Last name
 	Operator string `json:"operator"` //     operator: str  # Operator
 
 	// Name of the fuel provider
-	// in: body
 	//
 	// required: true
 	// example: Some Name
 	Provider string `json:"provider"` //     provider: str  # Postavshik
 
 	// Name of the fuel carrier
-	// in: body
 	//
 	// required: true
 	// example: Some Name
 	Contractor string `json:"contractor"` //     contractor: str  # Perevozshik
 
 	// The state number of the transport that delivered the fuel
-	// in: body
 	//
 	// required: true
 	// example: A902RUS
 	License_plate string `json:"license_plate"` //     license_plate: str   # GOS nomer
 
 	// Fuel loading status
-	// in: body
 	//
 	// required: true
 	// example: Uploaded
 	Status string `json:"status"` //     status: str  # Zagruzgen
 
 	// The status of the fuel intake record in the database (changed or not)
-	// in: body
 	//
 	// required: true
 	// example: false
 	Been_changed bool `json:"been_changed"` //     been_changed: bool   # table_color = '#f7fcc5' = T
 
+}
+
+// swagger:parameters paramGsmTableEntry
+type _ struct {
+	// The structure for the entry in the GSM table
+	// in:body
+	Body GsmTableEntry
 }
 
 // func (g GsmTableEntry) String() string {
@@ -186,14 +152,53 @@ type gsmTable struct {
 	db string
 }
 
-// swagger:route GET /gsm_table/id/{id} getEntryGsm idParam
-// getEntryGsm retrieves an entry with a specified ID from the GSM table
+// swagger:route POST /gsm_table GSM paramGsmTableEntry
+//
+// addEntryGsm
+//
+// Adds an entry to the GSM table
+//
+//	produces:
+//	- application/json
 //
 // responses:
-// 200: gsmTableEntry
-// 404: ErrorResponse
+//		200:IdEntry
+// 		400:ErrorMessage
 
-// getEntryGsm receives an entry with a specified ID from the GSM table
+// addEntryGsm adds an entry to the GSM table.
+func (g *gsmTable) addEntryGsm(w http.ResponseWriter, r *http.Request) {
+	log.Println("addEntryGsm Serving:", r.URL.Path, "from", r.Host)
+
+	var gsmEntry GsmTableEntry
+	dec := json.NewDecoder(r.Body)
+
+	w.Header().Set("Content-Type", "application/json")
+
+	if err := dec.Decode(&gsmEntry); err != nil {
+		log.Println(err)
+		w.WriteHeader(http.StatusBadRequest)
+		body := fmt.Sprintf(`{"details": "%s"}`, err)
+		fmt.Fprintf(w, "%s", body)
+		return
+	}
+
+	fmt.Fprintf(w, "%+v\n", gsmEntry)
+}
+
+// swagger:route GET /gsm_table/id/{id} GSM paramIdEntry
+//
+// getIdEntryGsm
+//
+//  Receives an entry with a specified ID from the GSM table
+//
+//	produces:
+//	- application/json
+//
+// responses:
+//		200:GsmTableEntry
+// 		404:ErrorMessage
+
+// getEntryGsm receives an entry with a specified ID from the GSM table.
 func (g *gsmTable) getGsmEntryId(w http.ResponseWriter, r *http.Request) {
 	log.Println("getEntryGsm Serving:", r.URL.Path, "from", r.Host)
 
@@ -204,7 +209,7 @@ func (g *gsmTable) getGsmEntryId(w http.ResponseWriter, r *http.Request) {
 	if !ok {
 		log.Println("ID value not set!")
 		w.WriteHeader(http.StatusNotFound)
-		encod.Encode(&ErrorResponse{Error: "ID value not set!"})
+		encod.Encode(&ErrorMessage{Details: "ID value not set!"})
 		return
 	}
 
@@ -212,15 +217,20 @@ func (g *gsmTable) getGsmEntryId(w http.ResponseWriter, r *http.Request) {
 	fmt.Fprintf(w, "<h1>ID = %s</h1>\n", id)
 }
 
-// swagger:route GET /gsm_table/date/{date} getEtryGsm dateParam
-// getEntryGsm retrieves an entry with a specified date from the GSM table
+// swagger:route GET /gsm_table/date/{date} GSM paramCrmDate
+//
+// getDateEntryGsm
+//
+//  Receives aan entry with a specified date from the GSM table
+//
+//	produces:
+//	- application/json
 //
 // responses:
-// 200: gsmTableEntry
-// 404: ErrorResponse
-// 400: ErrorResponse
+//		200:GsmTableEntry
+// 		404:ErrorMessage
 
-// getEntryGsm receives an entry with a specified date from the GSM table
+// getEntryGsm receives an entry with a specified date from the GSM table.
 func (g *gsmTable) getGsmEntryDate(w http.ResponseWriter, r *http.Request) {
 	log.Println("getEntryGsm Serving:", r.URL.Path, "from", r.Host)
 
@@ -231,7 +241,7 @@ func (g *gsmTable) getGsmEntryDate(w http.ResponseWriter, r *http.Request) {
 	if !ok {
 		log.Println("Date value not set!")
 		w.WriteHeader(http.StatusNotFound)
-		encod.Encode(&ErrorResponse{Error: "IDate value not set!"})
+		encod.Encode(&ErrorMessage{Details: "IDate value not set!"})
 		return
 	}
 
@@ -239,7 +249,7 @@ func (g *gsmTable) getGsmEntryDate(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println(err)
 		w.WriteHeader(http.StatusBadRequest)
-		encod.Encode(&ErrorResponse{Error: fmt.Sprintf(`{"details": "%s"}`, err)})
+		encod.Encode(&ErrorMessage{Details: fmt.Sprintf(`{"details": "%s"}`, err)})
 		// body := fmt.Sprintf(`{"details": "%s"}`, err)
 		// fmt.Fprintf(w, "%s", body)
 		return
@@ -262,33 +272,6 @@ func (g *gsmTable) getGsmEntryDate(w http.ResponseWriter, r *http.Request) {
 	}
 
 	encod.Encode(&gsmEntry)
-}
-
-// swagger:route POST /gsm_table addEntryGsm gsmTableEntry
-// addEntryGsm adds an entry to the GSM table
-//
-// responses:
-// 200: gsmTableEntry
-// 400: idResponse
-
-// addEntryGsm adds an entry to the GSM table.
-func (g *gsmTable) addEntryGsm(w http.ResponseWriter, r *http.Request) {
-	log.Println("addEntryGsm Serving:", r.URL.Path, "from", r.Host)
-
-	var gsmEntry GsmTableEntry
-	dec := json.NewDecoder(r.Body)
-
-	w.Header().Set("Content-Type", "application/json")
-
-	if err := dec.Decode(&gsmEntry); err != nil {
-		log.Println(err)
-		w.WriteHeader(http.StatusBadRequest)
-		body := fmt.Sprintf(`{"details": "%s"}`, err)
-		fmt.Fprintf(w, "%s", body)
-		return
-	}
-
-	fmt.Fprintf(w, "%+v\n", gsmEntry)
 }
 
 // newGsmTable() allocates and returns a new gsmTable.
